refactoring of method, part of functionality moved to new class CustomHttpClient.java