@@ -10,7 +10,7 @@ import java.security.NoSuchAlgorithmException;
 public class OldInputStreamProcessor {
     private String Sha1Hex = "";
     private String fullPathIncludedPdfName = "";
-    private String pathToSentFilesFolder = "";
+    private String pathToSentFilesFolder;
     private byte[] bytesArrayuploadedInputStream;
     private InputStream firstCloneUploadedInputStream;
 
@@ -22,16 +22,7 @@ public class OldInputStreamProcessor {
         //https://stackoverflow.com/questions/5923817/how-to-clone-an-inputstream
         //saveing of uploadedInputStream to pdf in local folder
         //create byte array from accepted uploadedInputStream
-        ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        IOUtils.copy(uploadedInputStream, baos);
-        bytesArrayuploadedInputStream = baos.toByteArray();
-        /*//alternative ways of copying to byte array
-        InputStream is;
-        byte[] array = is.readAllBytes();
-        byte[] bytes = IOUtils.toByteArray(is);
-        \/
-        //byte[] bytesArrayuploadedInputStream = IOUtils.toByteArray(uploadedInputStream);
-        */
+        bytesArrayuploadedInputStream = IOUtils.toByteArray(uploadedInputStream);
 
         //calculate sha1 from uploadedInputStream and create pdf file with it's sha1 name
         Sha1Hex = calculateSha1Hex(bytesArrayuploadedInputStream);
